--- a/Javascript lesson.html
+++ b/Javascript lesson.html
@@ -4,8 +4,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
-   <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+   <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 <link href="Graph.css" rel= "stylesheet" type="text/css">
 
 
