--- a/index.html
+++ b/index.html
@@ -21,20 +21,12 @@
   ga('create', 'UA-84088421-1', 'auto');
   ga('send', 'pageview');
 </script>
-
 </head>
 
 <body>
-
-
-
 <br>
 <img id="pokemonhead" src="Pokemon_Go.png">
-
-
-
 <body background ="green-one.jpg";>
-
 <br>
 <br>
 <p>Pokemon GO is one of the biggest hypes in gaming 2016. But who actually plays?
@@ -44,15 +36,14 @@ According to a survey mostly females plays Pokemon GO. Pokemon Go is part of Aug
 <br>
 
 <div class="sektion">
-<h1>Downloads of Pokemon GO</h1> <h1 class="page-content">
+<h1>Downloads of Pokemon GO</h1> 
+<h1 class="page-content">
 </div>
 
-<div class="sektion2"><h1>Smartphones sold<h1>
+<div class="sektion2">
+<h1>Smartphones sold<h1>
 <h1 class="page-content2"></h1>
 </div>
-
-
-
 <br>
 <br>
 <br>
